# hcare

./: .gitignore  ACCESS_MATRIX.md  env.example  pyproject.toml  requirements.txt
apps/ai/: schemas.py  views.py
apps/appointments/: admin.py  apps.py  consumers.py  forms.py  models.py  routing.py  schemas.py  signals.py  urls.py  views.py
apps/base/: admin.py  forms.py  middleware.py  mixin.py  models.py  validation.py  views.py
apps/doctors/: admin.py  forms.py  models.py  urls.py  views.py
apps/hospitals/: admin.py  crypto.py  forms.py  models.py  urls.py  views.py
apps/logs/: forms.py  urls.py  views.py
apps/medical_report/: apps.py  forms.py  models.py  urls.py  views.py
apps/otp/: __init__.py  admin.py  models.py  services.py  tests.py  urls.py  views.py
apps/patients/: admin.py  forms.py  models.py  urls.py  views.py
apps/payments/: admin.py  forms.py  models.py  urls.py  views.py
apps/prescription/: apps.py  urls.py  views.py
apps/seed/: apps.py
apps/users/: adapters.py  admin.py  axes.py  backends.py  forms.py  models.py  tests.py  urls.py  views.py
core/: asgi.py  settings.py  urls.py
staticfiles/: staticfiles.json
templates/: base.html  index.html  locked.html  login.html  register.html
templates/admin/: dashboard.html  medical_report_confirm_delete.html  medical_report_detail.html  medical_report_form.html  medical_report_list.html
templates/administer/: index_administer.html
templates/appointments/: appointment_admin_form.html  appointment_detail.html  appointment_doctor_list.html  appointment_doctor_schedule.html  (+16 more)
(+185 files in other folders)
